TAG: pdfdownload-6-0-25-3
TAG: pdfdownload-6-0-25-2
TAG: pdfdownload-6-0-25-1
DATE: 12/23/2024
STAFF: lec
wts2-1594/e4g-106/PMC journal being discontinued: Neural Dev, Mol Cell Biol

no delay:
    'EMBO J',
    'EMBO Rep'

1 year delay:
    'J Cell Biol' : 12,
    'J Exp Med' : 12,
    'J Virol' : 12,

TAG: pdfdownload-6-0-24-1
DATE: 11/11/2024
STAFF: lec
wts2-1574/e4g-64/Run PDF Download/Elsevier HTTP error
https://dev.elsevier.com/api_key_settings.html
__min_req_interval = 6
#       modified:   elsevier/SciDirectLib.py

TAG: pdfdownload-6-0-23-6
TAG: pdfdownload-6-0-23-5
DATE: 05/01/2024
STAFF: lec
wts2-1467/fl2-847/pdf download trackback error/elsevier
comment out: pmc/backPopulate.py/#progress("Warning: '%s'\n" % text)
curous to see what happens:  HISTORICAL_WINDOW_SIZE = 240 -> 90

TAG: pdfdownload-6-0-23-4
DATE: 03/13/2024
STAFF: sc
WTS2-1428/FL2-776 - elsevier error when month is 'Summer' or 'Spring'

TAG: pdfdownload-6-0-23-3
DATE: 02/29/2024
STAFF: lec
wts2-1421/fl2-764/obsolete QC reports/obsolete identify_missed_papers_plos
#       deleted:    identify_missed_papers_plos.sh
#       modified:   index.html
#       deleted:    pmc/identify_missed_papers_plos.py

TAG: pdfdownload-6-0-23-2
TAG: pdfdownload-6-0-23-1
DATE: 02/06/2024
STAFF: lec
wts2-1397/fl2-731/Migration to Rocky OS/backend/data loads
remove hard-coded python
#       modified:   pmc/download_pmc_papers.py
#       modified:   pmc/find_pdf_in_tar.py
#       modified:   pmc/identify_missed_papers_plos.py

TAG: pdfdownload-6-0-22-3
DATE: 09/xxi0815/2023
STAFF: sc
wts2-1269/fl2-506
Add another way to get publication date because some coming through w/o complete date:
k pubDate = artMetaE.find('pub-date/[@date-type="pub"]')

TAG: pdfdownload-6-0-22-2
TAG: pdfdownload-6-0-22-1
DATE: 02/15/2023
STAFF: sc
wts2-1122 - pmc/backPopulate.py - update pub-date code
 changed 'Exception:' to 'Warning:' in _runSearch method

TAG: pdfdownload-6-0-21-5
DATE: 12/20/2022
STAFF: sc
wts2-1056 remove eLife from PMC
