@@ -1,3 +1,9 @@
+TAG: pdfdownload-6-0-25-?
+DATE: 02/10/2025
+STAFF: lec
+wts2-1610/adds/subtractions to the PubMed Central Automated PDF download
+wts2-1611/adds/subtractions to the Science Direct Automated PDF download
+
 TAG: pdfdownload-6-0-25-3
 TAG: pdfdownload-6-0-25-2
 TAG: pdfdownload-6-0-25-1
